alteracçoõs na estrutura dto + mapper e reajusets no service repo e controller, todos do user